/**
AUTOGENERATED FROM CORE-PROTO. DO NOT EDIT.
 */
syntax = "proto3";

option java_multiple_files = true;
option java_package = "to.klay.wspro.core.game.proto";
option java_outer_classname = "ProtoEntities";

enum ProtoAttackType {
  DIRECT = 0;
  FRONTAL = 1;
  SIDE = 2;
}

enum ProtoCardAffiliation {
  AFFILIATION_WEISS = 0;
  AFFILIATION_SCHWARZ = 1;
  AFFILIATION_BOTH = 2;
}

enum ProtoCardColor {
  CARD_COLOR_BLUE = 0;
  CARD_COLOR_RED = 1;
  CARD_COLOR_YELLOW = 2;
  CARD_COLOR_GREEN = 3;
  CARD_COLOR_PURPLE = 4;
}

enum ProtoCardIcon {
  COUNTER = 0;
  CLOCK = 1;
  NO_ICON = 2;
}

enum ProtoCardOrientation {
  STAND = 0;
  REST = 1;
  REVERSED = 2;
}

enum ProtoCardTrigger {
  NONE = 0;
  SOUL = 1;
  RETURN = 2;
  POOL = 3;
  COMEBACK = 4;
  DRAW = 5;
  SHOT = 6;
  TREASURE = 7;
  GATE = 8;
  STANDBY = 9;
  CHOICE = 10;
}

enum ProtoCardType {
  CHARACTER = 0;
  EVENT = 1;
  CLIMAX = 2;
}

enum ProtoGameLocale {
  JP = 0;
  EN = 1;
}

enum ProtoGameVisibility {
  HIDDEN = 0;
  VISIBLE_TO_MASTER = 1;
  VISIBLE_TO_ALL = 2;
  VISIBLE_TO_OPPONENT = 3;
}

enum ProtoLoseConditions {
  LEVEL4 = 0;
  EMPTY_DECK_AND_WAITING = 1;
  DRAW_CONDITION = 2;
  CONCEDE = 3;
  CARD_EFFECT_CONDITION = 4;
  GAME_ERROR = 5;
}

enum ProtoTriggerName {
  CARD_MOVED = 0;
  CARD_DRAWN = 1;
  CARD_DISCARDED = 2;
  ZONE_SHUFFLED = 3;
  PLAYER_LOST = 4;
  GAME_OVER = 5;
  DECK_EMPTY = 6;
  REFRESH_POINT_ADDED = 7;
  TURN_STARTED = 8;
  CARD_ORIENTED = 9;
  PHASE_START = 10;
  CLOCK_FULL = 11;
  LEVELED_UP = 12;
  CARD_CLOCKED = 13;
  CARD_ENCORED = 14;
  CARD_PLAYED = 15;
  DAMAGE_PROCESSED = 16;
  END_OF_ATTACK = 17;
  TRIGGER_CARD_CHECKED = 18;
  WILL_ATTACK = 19;
  REVERSED_IN_BATTLE = 20;
  COST_PAID = 21;
  WILL_PAY_STOCK = 22;
  ATTACK_SETUP = 23;
}

enum ProtoTurnPhase {
  STAND_PHASE = 0;
  DRAW_PHASE = 1;
  CLOCK_PHASE = 2;
  MAIN_PHASE = 3;
  CLIMAX_PHASE = 4;
  ATTACK_PHASE = 5;
  ATTACK_DECLARATION_STEP = 6;
  TRIGGER_STEP = 7;
  COUNTER_STEP = 8;
  DAMAGE_STEP = 9;
  BATTLE_STEP = 10;
  ENCORE_STEP = 11;
  END_PHASE = 12;
}

enum ProtoZones {
  ZONE_DECK = 0;
  ZONE_HAND = 1;
  ZONE_WAITING_ROOM = 2;
  ZONE_CLOCK = 3;
  ZONE_LEVEL = 4;
  ZONE_STOCK = 5;
  ZONE_CLIMAX = 6;
  ZONE_MEMORY = 7;
  ZONE_RESOLUTION = 8;
  ZONE_CENTER_STAGE_LEFT = 9;
  ZONE_CENTER_STAGE_MIDDLE = 10;
  ZONE_CENTER_STAGE_RIGHT = 11;
  ZONE_BACK_STAGE_LEFT = 12;
  ZONE_BACK_STAGE_RIGHT = 13;
  ZONE_CENTER_STAGE_LEFT_MARKER = 14;
  ZONE_CENTER_STAGE_MIDDLE_MARKER = 15;
  ZONE_CENTER_STAGE_RIGHT_MARKER = 16;
  ZONE_BACK_STAGE_LEFT_MARKER = 17;
  ZONE_BACK_STAGE_RIGHT_MARKER = 18;
}

message ProtoCardClockedTrigger {
   ProtoGamePlayer player = 1;
   ProtoPlayingCard card = 2;
}

message ProtoCardDiscardedTrigger {
   ProtoGamePlayer player = 1;
   ProtoPlayingCard card = 2;
}

message ProtoCardDrawnTrigger {
   ProtoGamePlayer player = 1;
   ProtoPlayingCard card = 2;
}

message ProtoCardEncoredTrigger {
   ProtoPlayingCard card = 1;
}

message ProtoCardMovedTrigger {
   ProtoTriggerName name = 1;
   ProtoPlayingCard sourceCard = 2;
   ProtoPlayZone sourceZone = 3;
   ProtoPlayZone destinationZone = 4;
   int32 destinationIndex = 5;
   ProtoPlayingCard destinationCard = 6;
   ProtoCardOrientation destinationOrientation = 7;
   ProtoGameVisibility destinationVisibility = 8;
}

message ProtoCardOrientedTrigger {
   ProtoPlayingCard card = 1;
   ProtoCardOrientation orientedFrom = 2;
   ProtoCardOrientation orientTo = 3;
}

message ProtoCardPlayedTrigger {
   ProtoGamePlayer player = 1;
   ProtoPlayingCard card = 2;
   ProtoPlayZone sourceZone = 3;
   ProtoPlayZone destinationZone = 4;
}

message ProtoClockFullTrigger {
   ProtoGamePlayer player = 1;
}

message ProtoCostPaidTrigger {
}

message ProtoDamageProcessedTrigger {
   ProtoPlayingCard sourceCard = 1;
   int32 amount = 2;
   ProtoGamePlayer receivingPlayer = 3;
   bool damageCancelled = 4;
}

message ProtoDeckEmptyTrigger {
   ProtoGamePlayer player = 1;
}

message ProtoEndOfAttackTrigger {
   ProtoGamePlayer turnPlayer = 1;
}

message ProtoGameOverTrigger {
  repeated ProtoGamePlayer losingPlayers = 1;
}

message ProtoGamePlayer {
   string playerName = 1;
}

message GameTriggerProto {
  oneof triggerType {
    ProtoCardClockedTrigger cardClockedTrigger = 1;
    ProtoCardDiscardedTrigger cardDiscardedTrigger = 2;
    ProtoCardDrawnTrigger cardDrawnTrigger = 3;
    ProtoCardEncoredTrigger cardEncoredTrigger = 4;
    ProtoCardMovedTrigger cardMovedTrigger = 5;
    ProtoCardOrientedTrigger cardOrientedTrigger = 6;
    ProtoCardPlayedTrigger cardPlayedTrigger = 7;
    ProtoClockFullTrigger clockFullTrigger = 8;
    ProtoCostPaidTrigger costPaidTrigger = 9;
    ProtoDamageProcessedTrigger damageProcessedTrigger = 10;
    ProtoDeckEmptyTrigger deckEmptyTrigger = 11;
    ProtoEndOfAttackTrigger endOfAttackTrigger = 12;
    ProtoGameOverTrigger gameOverTrigger = 13;
    ProtoLeveledUpTrigger leveledUpTrigger = 14;
    ProtoPhaseStartedTrigger phaseStartedTrigger = 15;
    ProtoPlayerLostTrigger playerLostTrigger = 16;
    ProtoRefreshPointAddedTrigger refreshPointAddedTrigger = 17;
    ProtoReversedInBattleTrigger reversedInBattleTrigger = 18;
    ProtoTriggerCheckedTrigger triggerCheckedTrigger = 19;
    ProtoTurnStartedTrigger turnStartedTrigger = 20;
    ProtoWillAttackTrigger willAttackTrigger = 21;
    ProtoZoneShuffledTrigger zoneShuffledTrigger = 22;

  }
}


message ProtoLeveledUpTrigger {
   ProtoGamePlayer player = 1;
}

message ProtoLocalizedString {
   ProtoGameLocale locale = 1;
   string string = 2;
}

message ProtoPhaseStartedTrigger {
   ProtoGamePlayer turnPlayer = 1;
   ProtoTurnPhase phase = 2;
}

message ProtoPlayZone {
   ProtoGamePlayer owner = 1;
   ProtoZones zoneName = 2;
   ProtoGameVisibility visibility = 3;
  repeated ProtoPlayingCard contents = 4;
}

message ProtoPlayerLostTrigger {
   ProtoGamePlayer player = 1;
   ProtoLoseConditions loseCondition = 2;
}

message ProtoPlayingCard {
   ProtoGamePlayer master = 1;
   string guid = 2;
   ProtoCardOrientation orientation = 3;
   ProtoGameVisibility visibility = 4;
  repeated ProtoPlayingCard markers = 5;
   bool standable = 6;
   bool restable = 7;
   bool reversable = 8;
   bool targetable = 9;
   bool frontalAttackCapable = 10;
   bool sideAttackCapable = 11;
   bool directAttackCapable = 12;
   int32 fundamentalOrder = 13;
  repeated ProtoLocalizedString cardName = 14;
   int32 level = 15;
   int32 cost = 16;
   ProtoCardIcon icon = 17;
   int32 power = 18;
   int32 soul = 19;
   ProtoCardColor color = 20;
   ProtoCardType cardType = 21;
  repeated ProtoLocalizedString titleName = 22;
   string id = 23;
   ProtoCardAffiliation affiliations = 24;
  repeated ProtoLocalizedString traits = 25;
  repeated ProtoCardTrigger triggerIcons = 26;
}

message ProtoRefreshPointAddedTrigger {
   ProtoGamePlayer player = 1;
}

message ProtoReversedInBattleTrigger {
   ProtoPlayingCard reversedCard = 1;
   ProtoPlayingCard opposingCard = 2;
}

message ProtoTriggerCheckedTrigger {
   ProtoPlayingCard triggerCard = 1;
}

message ProtoTurnStartedTrigger {
   ProtoGamePlayer player = 1;
}

message ProtoWillAttackTrigger {
   ProtoPlayingCard attackingCard = 1;
   ProtoAttackType attackType = 2;
}

message ProtoZoneShuffledTrigger {
   ProtoPlayZone zone = 1;
  repeated ProtoPlayingCard cards = 2;
   ProtoTriggerName triggerName = 3;
}

